--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
-header:
+header:  
   - titles:
       # @start locale config
-      en      : &EN       Archive
+      en      : &EN       home
       en-GB   : *EN
       en-US   : *EN
       en-CA   : *EN
@@ -13,7 +13,7 @@ header:
       zh-Hant : &ZH_HANT  歸檔
       zh-TW   : *ZH_HANT
       zh-HK   : *ZH_HANT
-      ko      : &KO       아카이브
+      ko      : &EN       home
       ko-KR   : *KO
       fr      : &FR       Archives
       fr-BE   : *FR
@@ -27,7 +27,7 @@ header:
 
   - titles:
       # @start locale config
-      en      : &EN       About
+      en      : &EN       Archive
       en-GB   : *EN
       en-US   : *EN
       en-CA   : *EN
@@ -39,7 +39,7 @@ header:
       zh-Hant : &ZH_HANT  關於
       zh-TW   : *ZH_HANT
       zh-HK   : *ZH_HANT
-      ko      : &KO       소개
+      ko      : &KO       Archive
       ko-KR   : *KO
       fr      : &FR       À propos
       fr-BE   : *FR
@@ -49,4 +49,4 @@ header:
       fr-LU   : *FR
       tr      : &TR       Hakkında
       # @end locale config
-    url: /about.html
+    url: /archive.html
